<resources>
    <string name="app_name">EmpregaEu3</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">Login</string>
    <string name="alerta">error user</string>
    <string name="consultei">Consultei</string>
    <string name="confirmar">Confirmar</string>
    <string name="confirmar2">Confirmar</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="especialidade_oftalmologia">Especialidade: Oftalmologia</string>
    <string name="todo5">TODO</string>
    <string name="confirmar3">Confirmar</string>
    <string name="aguardando_data_disponivel">Aguardando data Disponivel</string>
    <string name="todo7">TODO</string>
    <string name="cancelar0">Cancelar</string>
    <string name="cancelar9">Cancelar</string>
    <string name="especialidade_oftalmologia2">Especialidade: Oftalmologia</string>
    <string name="data_29_05_2023">Data: 29/05/2023</string>
    <string name="todo8">TODO</string>
    <string name="f_bio_henrique_do_monte_cabral">Fábio Henrique do Monte Cabral</string>
    <string name="id_707_268">ID: 707.268.***.**</string>
    <string name="endere_o_rua_s_o_pedro_712_51012_270_casa_forte">Endereço: Rua São Pedro, 712 - 51012-270 (Casa Forte)</string>
    <string name="todo00">TODO</string>
    <string name="consulta_solicitada5">Consulta Solicitada</string>
    <string name="termos_de_responsabilidade">Termos de Responsabilidade</string>
    <string name="aceitar">Aceitar</string>
    <string name="todos_que_desejarem_acessar_os_servi_os_da_plataforma_dever_o_concordar_com_as_normas_contidas_neste_documento_de_modo_que_as_pessoas_que_n_o_concordarem_com_quaisquer_das_regras_presentes_nos_termos_e_condi_es_gerais_de_uso_n_o_dever_o_utilizar_o_servi_o_tal_documento_deve_ser_acompanhado_da_pol_tica_de_privacidade_da_plataforma_importante_pontuar_que_pol_tica_de_privacidade_se_refere_a_informa_es_espec_ficas_de_coleta_armazenamento_e_prote_o_de_dados_pessoais_de_usu_rios_de_um_site_ou_aplicativo_termos_e_condi_es_gerais_de_uso_servem_para_indicar_as_regras_que_devem_ser_respeitadas_ao_utilizar_a_plataforma_ou_seja_informam_as_obriga_es_e_direitos_dos_usu_rios_como_tamb_m_da_plataforma_visto_que_o_mesmo_serve_como_uma_esp_cie_de_contrato_de_ades_o">Todos que desejarem acessar os serviços da plataforma deverão concordar com as normas contidas neste documento. De modo que, as pessoas que não concordarem com quaisquer das regras presentes nos termos e condições gerais de uso não deverão utilizar o serviço. Tal documento deve ser acompanhado da Política de Privacidade da plataforma. É importante pontuar que: Política de Privacidade se refere a informações específicas de coleta, armazenamento e proteção de dados pessoais de usuários de um site ou aplicativo. Termos e Condições Gerais de Uso servem para indicar as regras que devem ser respeitadas ao utilizar a plataforma. Ou seja, informam as obrigações e direitos dos usuários como também da plataforma, visto que o mesmo serve como uma espécie de contrato de adesão.</string>
    <string name="consultei2">Consultei</string>
</resources>